--- a/test/treeGrid.html
+++ b/test/treeGrid.html
@@ -4,7 +4,10 @@
     <!-- for local development -->    
     <!-- <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../src/treeGrid.css">    
+    <link rel="stylesheet" href="../src/treeGrid.css">  
+    
+    <!--<link href="../bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">-->
+    <link href="../src/editable-custom.css" rel="stylesheet">
   </head>
   <body ng-controller="treeGridController" style="margin:20px">
     <div ng-model="showMinDir" ng-value="false">
@@ -29,12 +32,14 @@
         </div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.js"></script>
+    <script src="../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <!-- for local development -->
     <!--
         <script src="../lib/angular/angular.min.js"></script>
     -->
     <script src="../src/tree-grid-directive.js"></script>    
     <script src="treeGridTest.js"></script>
+    
     <script>
     </script>
   </body>
